# RedHatLeadScraper

./: .gitignore  README.md  pyproject.toml
assets/: README.md
config/: lead_verifier.example.json  lead_verifier.example.yaml
fastpeoplesearch.com-scraper-main/fastpeoplesearch.com-scraper-main/: automateFastPeopleSearch.com.py
lead_verifier/: __init__.py  __main__.py  cli.py  config.py  factory.py  io.py  legacy_orchestrator.py  merge.py  models.py  orchestrator.py  rate_limit.py  startup.bat
lead_verifier/ingestion/: __init__.py  exporters.py  loaders.py  models.py
lead_verifier/orchestrator/: __init__.py  service.py
lead_verifier/scrapers/: __init__.py  base.py  fast_people_search.py  sample.py  true_people_search.py
lead_verifier/ui/: __init__.py  app.py
scripts/: fast_people_search_cli.py
tests/: test_cli_smoke.py  test_fast_people_search.py  test_rate_limit.py  test_scrapers_import.py  test_true_people_search.py
tests/ingestion/: test_exporters.py  test_loaders.py
tests/ui/: test_app_logic.py
truepeoplesearch-master/truepeoplesearch-master/: data.csv  index.js  package-lock.json  package.json
